create verifyController
